--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 480px) {
   .fh5co-nav {
-    position: absolute;
   }
 }
 .fh5co-nav.scrolled {
@@ -119,7 +118,6 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 480px) {
   .fh5co-nav.scrolled {
-    background: transparent;
   }
 }
 .fh5co-nav #fh5co-logo {
@@ -163,7 +161,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 14px;
 }
 .fh5co-nav ul li a {
-  padding: 30px 15px;
+  padding: 10px 15px;
   color: rgba(255, 255, 255, 0.7);
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
@@ -250,7 +248,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .fh5co-nav ul li.active > a:after {
   position: absolute;
-  bottom: 25px;
+  bottom: 0;
   left: 0;
   right: 0;
   content: '';
